@@ -1,5 +1,14 @@
 2007-02-07  P. Henrique Silva  <henrique@astro.ufsc.br>
 
+	* src/python/uts/drivers/sbig/sbigdrv.py: Add Filter and
+	Temperature support.
+
+	* src/python/uts/drivers/sbig/sbig.py: Add Filter and Temperature
+	support.
+
+	Fix a lot of indentation bugs that was preventing images to be
+	correctly saved.
+	
 	* src/python/uts/instruments/camera.py: Add temperature support.
 
 	* src/python/uts/instruments/filterwheel.py: New.
